# ESP32_ZephyrOS_I2S_Microphone

./: .gitignore  CMakeCache.txt  CMakeLists.txt  my.overlay  notes.md  prj.conf  west.yml
src/: access_point.cpp  access_point.h  led_controler.cpp  led_controler.h  main.c  main.cpp  network_com.cpp  network_com.h  sound_buff.cpp  sound_buff.h  sound_queue.cpp  sound_queue.h  sound_recording.cpp  sound_recording.h  speach.cpp  speach.h  tcp_com.h  user_buttons.cpp  user_buttons.h
